[package]
name = "window_clipboard"
description = "A library to obtain clipboard access from a `raw-window-handle`"
readme = "README.md"
keywords = ["clipboard", "window", "ui", "gui", "raw-window-handle"]
categories = ["gui"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
raw-window-handle = "0.5"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "4.0", features = ["std"] }

[target.'cfg(target_os = "macos")'.dependencies]
clipboard_macos = { workspace = true }

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten", target_os="ios", target_os="redox"))))'.dependencies]
clipboard_x11 = { workspace = true }
clipboard_wayland = { workspace = true }

[dev-dependencies]
rand = "0.8"
winit = "0.28"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
clipboard_macos = { path = "./crates/macos" }
clipboard_x11 = { path = "./crates/x11" }
clipboard_wayland = { path = "./crates/wayland" }

[workspace.package]
version = "0.3.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "A library to obtain clipboard access from a `raw-window-handle`"
license = "MIT"
repository = "https://github.com/hecrj/window_clipboard"
documentation = "https://docs.rs/window_clipboard"
readme = "README.md"
keywords = ["clipboard", "window", "ui", "gui", "raw-window-handle"]
categories = ["gui"]