[package]
name = "clipboard_macos"
description = "A library to obtain access to the macOS clipboard"
keywords = ["clipboard", "macos"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"
