[package]
name = "clipboard_x11"
description = "A library to obtain access to the X11 clipboard"
keywords = ["clipboard", "x11"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
x11rb = "0.11"
thiserror = "1.0"
